# ProductOrderService

./: .env.example  .gitignore  backend.dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: order.py  product.py
app/api/v1/tests/: conftest.py  test_order.py  test_product.py
app/core/: config.py  container.py
app/db/: __init__.py  manager.py
app/db/models/: base_mixins.py  order.py  product.py
app/repositories/: __init__.py  base.py  order.py  product.py
app/schemas/: __init__.py  order.py  order_item.py  product.py
app/services/: __init__.py  mixins.py  order.py  product.py
app/utils/: enums.py  orm.py
migrations/: env.py
migrations/versions/: 0251af143b4b_initial.py  0bb4ba9bfd5f_initial.py
